--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -9,21 +9,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">About QuizMaster</a>
+        <a class="navbar-brand" href="/">Take-A-Hike</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/quiz_choose">Quizzes</a></li>
-        <li><a href="#">My Details</a></li>
+        <li><a href="/trails">Explore a Trail</a></li>
+        <li><a href="/hike">Plan a Hike</a></li>
       </ul>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <ul class="nav navbar-nav navbar-right">
-
+      <% if @current_user %>
+        <button id="logout-button" class="btn btn-lg btn-danger">Sign Out</button>
+      <% else %>
         <a href="/signup" class="btn btn-lg btn-warning">Sign Up</a>
         <a href="/signin" class="btn btn-lg btn-primary">Sign In</a>
-
-        <button id="logout-button" class="btn btn-lg btn-danger">Sign Out</button>
-
+      <% end %>
       </ul>
     </div>
       <!-- /.navbar-collapse -->
