--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up</h1>
+<!-- <h1>Sign Up</h1>
 
 <form id="signup-form">
   <input type="email" name="email" placeholder="email">
@@ -13,4 +13,4 @@
   <input type="email" name="email" placeholder="email">
   <input type="password" name="password" placeholder="password">
   <button type="submit">Submit</button>
-</form>
+</form> -->
