Improvements to HTML & routing

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -15,10 +15,12 @@
       <ul class="nav navbar-nav">
         <li><a href="/trails">Explore a Trail</a></li>
         <li><a href="/hike">Plan a Hike</a></li>
+        <li><a href="/search">Search</a></li>
       </ul>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <ul class="nav navbar-nav navbar-right">
       <% if @current_user %>
+        <button id="hiker_page" class="btn btn-lg btn-info">Hiker Page</button>
         <button id="logout-button" class="btn btn-lg btn-danger">Sign Out</button>
       <% else %>
         <a href="/signup" class="btn btn-lg btn-warning">Sign Up</a>
