trails html updated

--- a/app/views/trails/trail_detail.html.erb
+++ b/app/views/trails/trail_detail.html.erb
@@ -1,3 +1,47 @@
+
+<div class="container-fluid">
+  <div class="jumbotron">
+      <h1><%= Trail.trail_name %> Trail Details</h1>
+      <p>Sed placerat fringilla quam et.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-6">
+      <a href="#"><img class="img-responsive img-circle" src="images/feat1.jpg"></a>
+      <h3 class="text-center">Type 1</h3>
+      <p>Dummy Text..</p>
+      <a href="#" class="btn btn-success">Book Now @ $599</a>
+    </div>
+
+    <div class="col-md-6">
+      <a href="#"><img class="img-responsive img-circle" src="images/feat2.jpg"></a>
+      <h3 class="text-center">Type 2</h3>
+      <p>Dummy Text..</p>
+      <a href="#" class="btn btn-danger">Book Now @ $899</a>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1><%= Trail.trail_name %> Trail Details</h1>
 
 <table class="table">
@@ -28,33 +72,3 @@
   </tbody>
 </table>
 
-<table class="table">
-  <thead class="thread-default">
-    <tr>
-      <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
