--- a/app/views/trails/regions.html.erb
+++ b/app/views/trails/regions.html.erb
@@ -1,31 +1,31 @@
 <div id="regions">
   <div class="well">
     <h1>So, where would you like to go hiking?</h1>
-    <div id="region-links">
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/HongKongButton.png", :alt => "icon") %><h4>Hong Kong Island</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/LantauButton.png", :alt => "icon") %><h4>Lantau Island</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/LammaButton.png", :alt => "icon") %><h4>Lamma Island</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/CheungChauButton.png", :alt => "icon") %><h4>Cheung Chau Island</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/PengChauButton.png", :alt => "icon") %><h4>Peng Chau Island</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/KowloonButton.png", :alt => "icon") %><h4>Kowloon</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/CentralNTButton.png", :alt => "icon") %><h4>Central New Territories</h4>
-      </div></a>
-      <a href=""><div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <%= image_tag("region_images/SaiKungButton.png", :alt => "icon") %><h4>Sai Kung</h4>
-      </div></a>
-    </div>
+  </div>
+  <div id="region-links">
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/HongKongButton.png", :alt => "icon") %><h4>Hong Kong Island</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/LantauButton.png", :alt => "icon") %><h4>Lantau Island</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/LammaButton.png", :alt => "icon") %><h4>Lamma Island</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/CheungChauButton.png", :alt => "icon") %><h4>Cheung Chau Island</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/PengChauButton.png", :alt => "icon") %><h4>Peng Chau Island</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/KowloonButton.png", :alt => "icon") %><h4>Kowloon</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/CentralNTButton.png", :alt => "icon") %><h4>Central New Territories</h4>
+    </div></a>
+    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= image_tag("region_images/SaiKungButton.png", :alt => "icon") %><h4>Sai Kung</h4>
+    </div></a>
   </div>
 </div>
