Auto-render trails lists by region

--- a/app/views/trails/regions.html.erb
+++ b/app/views/trails/regions.html.erb
@@ -6,7 +6,7 @@
     <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <%= image_tag("region_images/HongKongButton.png", :alt => "icon") %><h4>Hong Kong Island</h4>
     </div></a>
-    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <a href="/trails?region=Lantau Island"><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <%= image_tag("region_images/LantauButton.png", :alt => "icon") %><h4>Lantau Island</h4>
     </div></a>
     <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
