--- a/app/views/trails/details.html.erb
+++ b/app/views/trails/details.html.erb
@@ -1,34 +1,26 @@
 <div id="trail">
-  <div class="container-fluid">
-    <div class="jumbotron">
-        <h1><%= @trail_name %> Trail Details</h1>
-    </div>
-  </div>
 
   <div id="details">
     <div class="well">
-      <h1>Everything you need to know about <%= @trail_name %></h1>
+      <h2><%= @trail.trail_name %> Trail Details</h2></br>
+      <h3><%= @trail.descriptions%></h3>
     </div>
 
     <div class="trail-details">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 item-wrapper">
-        <div class="col-xs-6 trail-image-div">
-          <%= image_tag(trail.pt1_photo, :alt => "icon") %>
-          <h4><%= trail.pt1_name %></h4>
-        </div>
-        <div class="col-xs-6 trail-info-div">
-          <h4>Description: <%= trail.pt1_info %></br></br>
-          Getting there: <%= trail.pt1_transp %></br></h4>
+        <div class="col-xs-9 trail-image-div">
+          <%= image_tag(@trail.pt1_photo, :alt => "icon") %>
+          <h2><%= @trail.pt1_name %></h2></br>
+          <h3>Description: <%= @trail.pt1_info %></br></br>
+          Getting there: <%= @trail.pt1_transp %></h3>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 item-wrapper">
-        <div class="col-xs-6 trail-image-div">
-          <%= image_tag(trail.pt2_photo, :alt => "icon") %>
-          <h4><%= trail.pt2_name %></h4>
-        </div>
-        <div class="col-xs-6 trail-info-div">
-          <h4>Description: <%= trail.pt2_info %></br></br>
-          Getting there: <%= trail.pt2_transp %></br></h4>
+        <div class="col-xs-9 trail-image-div">
+          <%= image_tag(@trail.pt2_photo, :alt => "icon") %>
+          <h2><%= @trail.pt2_name %></h2></br>
+          <h3>Description: <%= @trail.pt2_info %></br></br>
+          Getting there: <%= @trail.pt2_transp %></h3>
         </div>
       </div>
     </div>
