--- a/app/views/hikes/_form.html.erb
+++ b/app/views/hikes/_form.html.erb
@@ -14,6 +14,24 @@
   <div class="field">
     <%= f.label :hike_name %> <br>
     <%= f.text_field :hike_name %>
+  </div><br>
+  <div class="field">
+    <%= f.label :trail %> <br>
+    <select id="regions-list">
+      <option selected value="base">Please Select</option>
+      <option value="Hong Kong Island">Hong Kong Island</option>
+      <option value="Kowloon">Kowloon</option>
+      <option value="Central New Territories">Central New Territories</option>
+      <option value="Sai Kung">Sai Kung Country Park</option>
+      <option value="Lamma Island">Lamma Island</option>
+      <option value="Lantau Island">Lantau Island</option>
+      <option value="Cheung Chau Island">Cheung Chau Island</option>
+      <option value="Peng Chau Island">Peng Chau Island</option>
+    </select>
+    <br><br>
+    <select id="trails-list">
+      <option>Please choose from above</option>
+    </select><br><br>
   </div>
   <div>
     <div class="field">
