HK trails added

--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -20,8 +20,12 @@
               <h4><%= trail.trail_name %></h4>
             </div>
             <div class="col-xs-6 map-info-div">
-              <h4>Difficulty (Max=4): <%= trail.difficulty %></br></br>
-              Distance (Km): <%= trail.distance %></br></br>
+              <h4>Difficulty (Max = 4): <%= trail.difficulty %></br>
+              Length (Max = 4): <%= trail.d_length %></br>
+              Time (Max = 4): <%= trail.d_time %></br>
+              Gradient (Max = 4): <%= trail.d_gradient %></br>
+              Surface (Max = 4): <%= trail.d_surface %></br></br>
+              Distance (Km): <%= trail.distance %></br>
               Est. Time (Hrs): <%= trail.est_time %></h4>
             </div>
           </div>
