--- a/app/views/trails/regions.html.erb
+++ b/app/views/trails/regions.html.erb
@@ -3,7 +3,7 @@
     <h1>So, where would you like to go hiking?</h1>
   </div>
   <div id="region-links">
-    <a href=""><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <a href="/trails?region=Hong Kong Island"><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <%= image_tag("region_images/HongKongButton.png", :alt => "icon") %><h4>Hong Kong Island</h4>
     </div></a>
     <a href="/trails?region=Lantau Island"><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
