Mostly working POST method for hike form.

--- a/app/views/hikes/_form.html.erb
+++ b/app/views/hikes/_form.html.erb
@@ -1,4 +1,4 @@
-<form action="/hikes" method="post">
+<form id="create_a_hike">
   <div class="field">
     <label for="hike_name">Hike Name</label> <br>
     <input type="text" id="hike_name" />
@@ -46,11 +46,11 @@
     </div>
     <div class="field">
       <label for="hike_distance">Hike Distance</label><br>
-      <input type="text" id="hike_distance" placeholder="0" /><label> km</label>
+      <input type="text" id="hike_distance" placeholder="0" /> <label>km</label>
     </div>
     <div class="field">
       <label for="hike_time">Estimated Time</label><br>
-      <input type="text" id="hike_time" placeholder="0" /> <label> hrs</label>
+      <input type="text" id="hike_time" placeholder="0" /> <label>hrs</label>
     </div>
   </div> <br>
   <div class="actions">
