--- a/app/views/trails/regions.html.erb
+++ b/app/views/trails/regions.html.erb
@@ -1,6 +1,6 @@
 <div id="regions">
   <div class="well">
-    <h1>So, where would you like to go hiking?</h1>
+    <h1>Where would you like to go hiking?</h1>
   </div>
   <div id="region-links">
     <a href="/trails?region=Hong Kong Island"><div class="region-button col-lg-3 col-md-4 col-sm-6 col-xs-12">
