--- a/app/views/trails/details.html.erb
+++ b/app/views/trails/details.html.erb
@@ -2,7 +2,7 @@
 
   <div id="details">
     <div class="well">
-      <h2><%= @trail.trail_name %> Trail Details</h2></br>
+      <h2><%= @trail.trail_name %> Trail Details</h2>
       <h3><%= @trail.descriptions%></h3>
     </div>
 
@@ -10,7 +10,7 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 item-wrapper">
         <div class="col-xs-9 trail-image-div">
           <%= image_tag(@trail.pt1_photo, :alt => "icon") %>
-          <h2><%= @trail.pt1_name %></h2></br>
+          <h2><%= @trail.pt1_name %></h2>
           <h3>Description: <%= @trail.pt1_info %></br></br>
           Getting there: <%= @trail.pt1_transp %></h3>
         </div>
@@ -18,7 +18,7 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 item-wrapper">
         <div class="col-xs-9 trail-image-div">
           <%= image_tag(@trail.pt2_photo, :alt => "icon") %>
-          <h2><%= @trail.pt2_name %></h2></br>
+          <h2><%= @trail.pt2_name %></h2>
           <h3>Description: <%= @trail.pt2_info %></br></br>
           Getting there: <%= @trail.pt2_transp %></h3>
         </div>
