welcome page added

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,10 @@
+<h1>About Take A Hike</h1></br>
+
+Welcome to Take-A-Hike, Hong Kong's premier hiking site for planning, organizing and researching trails and events.</br></br>
+
+If you are a first time visitor, please set up an account so you can start planning your hiking adventures right away. Then click 'Plan a Hike' to plan and set up group activities. Log all your activity on the site to track your own achievements.</br><br>
+
+If you are just passing through, click 'Explore a Trail' to look through the various trails and learn about their history and details.</br></br>
+
+Happy trails!!!
 
