--- a/app/assets/stylesheets/trails.scss
+++ b/app/assets/stylesheets/trails.scss
@@ -9,6 +9,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        text-align: center;
         max-width: 200px;
       }
 }
