--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -1,6 +1,9 @@
 <div id="hikers">
   <div class="well">
     <h1><%= @hiker.name %></h1>
+    <% if @current_user %>
+      <button id="edit_user_details" class="btn btn-lg btn-primary">Edit User Details</button>
+    <% end %>
   </div>
 
   <div class="well">
