--- a/app/views/hikes/_form.html.erb
+++ b/app/views/hikes/_form.html.erb
@@ -1,12 +1,14 @@
 <form id="create_a_hike">
+
   <div class="field">
-    <label for="hike_name">Hike Name</label> <br>
-    <input type="text" id="hike_name" />
-  </div><br>
+    <label for="hike_name"  >Event Name</label>
+    <input type="text" placeholder="eg, Lantau Peak or Bust" id="hike_name" />
+  </div>
+
   <div class="field">
-    <label for="trails_list">Trail</label><br>
+    <label for="trails_list">Trail Details</label>
     <select id="regions_list">
-      <option selected value="base">Please Select</option>
+      <option selected value="base">Please Select Region</option>
       <option value="Hong Kong Island">Hong Kong Island</option>
       <option value="Kowloon">Kowloon</option>
       <option value="Central New Territories">Central New Territories</option>
@@ -16,44 +18,43 @@
       <option value="Cheung Chau Island">Cheung Chau Island</option>
       <option value="Peng Chau Island">Peng Chau Island</option>
     </select>
-    <br><br>
     <select id="trails_list">
-      <option>Please choose from above</option>
-    </select><br><br>
+      <option>Please choose trail</option>
+    </select><br>
+  </div>
+  <div class="field">
+    <label for="hike_distance">Hike Distance (Km)</label>
+    <input type="text" id="hike_distance" placeholder="0" />
+  </div>
+  <div class="field">
+    <label for="hike_time">Estimated Time (Hrs)</label>
+    <input type="text" id="hike_time" placeholder="0" />
   </div>
   <div>
     <div class="field">
-      <label for="date">Date</label><br>
-      <input type="date" id="date" placeholder="yyyy/mm/dd" />
+      <label for="date">Date</label>
+      <input type="date" id="date" placeholder="yyyy/mm/dd" /></br>
+      <label for="start_time">Start Time</label>
+      <input type="time" id="start_time" />
     </div>
-    <div class="field">
-      <label for="start_time">Start Time</label><br>
-      <input type="text" id="start_time" />
-    </div>
-    <div class="field">
-      <label for="meet_instructions">Meeting Instructions</label><br>
-      <textarea id="meet_instructions" placeholder="Where will your group meet?"></textarea>
-    </div>
+
   </div>
   <div>
     <div class="field">
-      <label for="start_point">Start Point</label><br>
+      <label for="start_point">Start Point</label>
       <input type="text" id="start_point" placeholder="Placeholder" />
-    </div>
-    <div class="field">
-      <label for="end_point">End Point</label><br>
+      <label for="end_point">End Point</label>
       <input type="text" id="end_point" placeholder="Placeholder" />
+      <label>Completed?</label>
+      <input id="completed" type="checkbox"></input>
     </div>
     <div class="field">
-      <label for="hike_distance">Hike Distance</label><br>
-      <input type="text" id="hike_distance" placeholder="0" /> <label>km</label>
+      <label for="meet_instructions">Other Meeting Instructions</label></br>
+      <textarea id="meet_instructions" placeholder="Provide specific instructions for meeting up, stuff to bring and other particulars..."></textarea>
     </div>
-    <div class="field">
-      <label for="hike_time">Estimated Time</label><br>
-      <input type="text" id="hike_time" placeholder="0" /> <label>hrs</label>
+    <div class="actions">
+      <input type="submit" class="btn btn-info" value="Create Hike">
     </div>
-  </div> <br>
-  <div class="actions">
-    <input type="submit" class="btn btn-info" value="Create Hike">
   </div>
+
 </form>
