--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -7,16 +7,19 @@
     <% end %>
   </div>
 
-  <div class="well">
-    <h3>Details</h3><br>
+  <div class="well" id="user_details">
+    <h3>Details</h3>
   </div>
 
-  <div class="well">
+  <div class="well" id="user_records">
     <h3>Personal Records</h3>
   </div>
 
   <div class="well">
     <h3><%= @hiker.name %>'s Hikes</h3>
+    <div id="all_hikes">
+      <h4>All Hikes</h4>
+    </div>
     <div id="upcoming_hikes">
       <h4>Upcoming Hikes</h4>
     </div>
