Hikes Page started

--- a/app/views/hikes/_form.html.erb
+++ b/app/views/hikes/_form.html.erb
@@ -53,7 +53,7 @@
       <textarea id="meet_instructions" placeholder="Provide specific instructions for meeting up, stuff to bring and other particulars..."></textarea>
     </div>
     <div class="actions">
-      <input type="submit" class="btn btn-info" value="Create Hike">
+      <input id="create" type="submit" class="btn btn-info" value="Create Hike">
     </div>
   </div>
 
