--- a/app/assets/stylesheets/hikes.scss
+++ b/app/assets/stylesheets/hikes.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#create_a_hike {
+#create_a_hike, #hike_details {
   font-size: 25px;
 
 }
