Wrote GET requests for show pages

--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -19,12 +19,36 @@
     <h3><%= @hiker.name %>'s Hikes</h3>
     <div id="all_hikes">
       <h4>All Hikes</h4>
+      <table id="all_hikes_table" class="table-striped">
+        <tr>
+          <th>Hike ID</th>
+          <th>Date</th>
+          <th>Hike Name</th>
+          <th>Completed?</th>
+        </tr>
+      </table>
     </div>
     <div id="upcoming_hikes">
       <h4>Upcoming Hikes</h4>
+      <table id="upcoming_hikes_table" class="table-striped">
+        <tr>
+          <th>Hike ID</th>
+          <th>Date</th>
+          <th>Hike Name</th>
+          <th>Completed?</th>
+        </tr>
+      </table>
     </div>
     <div id="complete_hikes">
       <h4>Past Hikes</h4>
+      <table id="complete_hikes_table" class="table-striped">
+        <tr>
+          <th>Hike ID</th>
+          <th>Date</th>
+          <th>Hike Name</th>
+          <th>Completed?</th>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
