Nav elements and display tables

--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -19,16 +19,17 @@
     <h3><%= @hiker.name %>'s Hikes</h3>
     <div id="all_hikes">
       <h4>All Hikes</h4>
-      <table id="all_hikes_table" class="table-striped">
+      <table id="all_hikes_table" class="table">
         <tr>
           <th>Hike ID</th>
           <th>Date</th>
           <th>Hike Name</th>
           <th>Completed?</th>
+          <th>View</th>
         </tr>
       </table>
     </div>
-    <div id="upcoming_hikes">
+    <!-- <div id="upcoming_hikes">
       <h4>Upcoming Hikes</h4>
       <table id="upcoming_hikes_table" class="table-striped">
         <tr>
@@ -49,6 +50,6 @@
           <th>Completed?</th>
         </tr>
       </table>
-    </div>
+    </div> -->
   </div>
 </div>
