--- a/app/views/hikes/_form.html.erb
+++ b/app/views/hikes/_form.html.erb
@@ -46,7 +46,7 @@
       <label for="end_point">End Point</label>
       <input type="text" id="end_point" placeholder="Placeholder" />
       <label>Completed?</label>
-      <input id="completed" type="checkbox" value="checked"></input>
+      <input id="completed" type="checkbox"></input>
     </div>
     <div class="field">
       <label for="meet_instructions">Other Meeting Instructions</label></br>
