--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -1,30 +1,22 @@
 <div id="hikers">
-  <div class="well">
-    <h2><%= @hiker.name %></h2>
-    <h3><%= @hiker.nickname %></h3>
-    <% if @current_user %>
-      <button id="edit_user_details" class="btn btn-lg btn-primary">Edit User Details</button>
-    <% end %>
-  </div>
 
-  <div class="well" id="user_details">
-    <h3>Details</h3>
-  </div>
+
 
   <div class="well" id="user_records">
-    <h3>Personal Records</h3>
-  </div>
-
-  <div class="well">
-    <h3><%= @hiker.name %>'s Hikes</h3>
+    <h2><%= @hiker.name %> aka: <%= @hiker.nickname %></h2>
+    <% if @current_user %>
+      <button id="edit_user_details" class="btn btn-lg btn-primary">Edit Details</button>
+    <% end %>
+    <h3><%= @hiker.nickname %>'s Hikes</h3>
     <div id="all_hikes">
       <h4>All Hikes</h4>
       <table id="all_hikes_table" class="table">
         <tr>
-          <th>Hike ID</th>
           <th>Date</th>
           <th>Hike Name</th>
-          <th>Completed?</th>
+          <th>Done?</th>
+          <th>Distance</th>
+          <th>Time</th>
           <th>View</th>
         </tr>
       </table>
