--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,8 +19,12 @@
 }
 */
 
+
+
+
 #signin-form, #signup-form {
   display: in-line;
+  margin-left: 25px;
   max-width: 1000px;
   font-size: 25px;
   appearance: none;
