--- a/app/views/hikers/show.html.erb
+++ b/app/views/hikers/show.html.erb
@@ -1,6 +1,4 @@
-<div id="hikers">
-
-
+<div class="container" id="hikers">
 
   <div class="well" id="user_records">
     <h2><%= @hiker.name %> aka: <%= @hiker.nickname %></h2>
