--- a/app/views/hikes/new.html.erb
+++ b/app/views/hikes/new.html.erb
@@ -1,11 +1,13 @@
-<div class="well">
-  Create a new hike
-</div>
+<div class="container">
+Create a new hike
 
-<div class="well">
-  <%= render 'form' %>
-</div>
 
-<div class="well">
-  <%= link_to 'Back to the Main Page', main_path %>
+  <div class="well">
+    <%= render 'form' %>
+  </div>
+
+  <div class="well">
+    <%= link_to 'Back to the Main Page', main_path %>
+  </div>
+
 </div>
