--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,7 @@
-<h1>About Take A Hike</h1></br>
+
+<div class="container">
+
+<h1>About Take-A-Hike</h1></br>
 
 Welcome to Take-A-Hike, Hong Kong's premier hiking site for planning, organizing and researching trails and events.</br></br>
 
@@ -8,3 +11,4 @@ If you are just passing through, click 'Explore a Trail' to look through the var
 
 Happy trails!!!
 
+</div>
