--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,6 @@ h1 {
 
 body {
   font-family: 'Caveat Brush', cursive; font-weight: 500; font-size: 40px;
-  background-image: url(background/home_bkgrd_blurr.jpg);
+  background-image: image-url(background/home_bkgrd_blurr.jpg);
 }
 
